<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Txt_editar_p"
            android:text="@string/Txt_editar_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:id="@+id/perfilRL"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/Txt_editar_p"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/IvPerfil"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/perfil"
                android:scaleType="centerCrop" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:layout_alignParentEnd="true"
                android:src="@drawable/img" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/perfilRL"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:hint="@string/Et_nombres">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILFechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TILNombres"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:hint="@string/Et_f_nac">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtFechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LLTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TILFechaNac"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/selectorCod"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:gravity="center" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/Et_telefono">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LLTelefono"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Btn_actualizar"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </RelativeLayout>

</RelativeLayout>
